[package]
name = "card_io_fw"
description = "Card/IO ECG device firmware"
version = "0.1.0"
authors = ["Dániel Buga <bugadani@gmail.com>"]
edition = "2021"
license = "MIT"

[workspace.dependencies]
embedded-graphics = "0.8.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
embedded-nal-async = "0.8.0"
embedded-io = "0.6"
embedded-io-async = "0.6"
embedded-menu = "0.6.0"
embassy-net = { version = "0.6", features = [
    "tcp",
    "dhcpv4",
    "dns",
    "medium-ethernet",
] }
embassy-sync = { version = "0.6.0" }
embassy-executor = { version = "0.7" }

heapless = "0.8"
log = { version = "0.4.18", default-features = false, features = [
    "max_level_info",
    "release_max_level_info",
] }
logger = { path = "logger" }
signal-processing = { path = "signal-processing" }
norfs = { git = "https://github.com/card-io-ecg/norfs.git", rev = "00103fd" }
norfs-driver = { git = "https://github.com/card-io-ecg/norfs.git", rev = "00103fd" }
norfs-esp32s3 = { git = "https://github.com/card-io-ecg/norfs.git", rev = "00103fd" }
norfs-esp32c6 = { git = "https://github.com/card-io-ecg/norfs.git", rev = "00103fd" }
object-chain = "0.1.3"
bad-server = { path = "bad-server" }
defmt = "0.3.8"
ufmt = "0.2.0"

smoltcp = { version = "0.12.0", default-features = false, features = [
  "dns-max-server-count-2",
] }

[dependencies]
embassy-futures = { version = "0.1.0" }
embassy-executor = { workspace = true, features = ["nightly"] }
embassy-time = { version = "0.4.0" }

embedded-hal-old = { package = "embedded-hal", version = "0.2.7" }
rtt-target = { version = "0.6.0", optional = true }
panic-rtt-target = { version = "0.2.0", optional = true }

esp-hal = { version = "1.0.0-beta.0", features = ["unstable"] }
esp-hal-embassy = { version = "0.7.0" }
esp-backtrace = { version = "0.15.1", optional = true, features = [
    "panic-handler",
    "exception-handler"
] }
esp-println = { version = "0.13.1", default-features = false, optional = true, features = [
    "critical-section",
] }
esp-alloc = "0.7.0"
esp-wifi = { version = "0.13.0", features = ["wifi"] }

display-interface = "0.5"
display-interface-spi = "0.5"
ssd1306 = { version = "0.9.0", features = ["async", "graphics"] }
maybe-async-cfg = "=0.2.4"

portable_atomic_enum = "0.3.1"
config-site = { path = "config-site", default-features = false, features = [
    "embedded",
] }
critical-section = "1.1"
device-descriptor = { path = "device-descriptor" }
fugit = "0.3.7"
register-access = { path = "register-access" }
gui = { path = "gui" }
macros = { path = "macros" }
embassy-alloc-taskpool = { path = "embassy-alloc-taskpool" }
ads129x = { path = "ads129x", features = ["ufmt-impl"] }
max17055 = { path = "max17055", optional = true, features = ["ufmt-impl"] }
signal-processing = { workspace = true, features = ["alloc"] }
replace_with = { version = "0.1", default-features = false, features = [
    "nightly",
] }
static_cell = { version = "2.0.0" }
bad-server = { path = "bad-server", features = ["embassy"] }
embedded-tls = { version = "0.17.0", default-features = false }
reqwless = "0.13.0"

embedded-graphics.workspace = true
embedded-hal.workspace = true
embedded-hal-async.workspace = true
embedded-hal-bus.workspace = true
embedded-nal-async.workspace = true
embedded-io.workspace = true
embedded-io-async.workspace = true
embedded-menu.workspace = true
embassy-net.workspace = true
embassy-sync.workspace = true

norfs.workspace = true
norfs-driver.workspace = true
norfs-esp32s3 = { workspace = true, optional = true, features = [
    "critical-section",
] }
norfs-esp32c6 = { workspace = true, optional = true, features = [
    "critical-section",
] }
heapless.workspace = true
object-chain.workspace = true
ufmt.workspace = true

logger.workspace = true
defmt.workspace = true

smoltcp.workspace = true
crc = "3.0.1"
enumset = "1.1.3"

[patch.crates-io]
# esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", rev = "26cf556cde2b7a78358f440b362608b3264d30bd" }
# esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal.git", rev = "26cf556cde2b7a78358f440b362608b3264d30bd" }
# esp-wifi = { git = "https://github.com/esp-rs/esp-hal.git", rev = "26cf556cde2b7a78358f440b362608b3264d30bd" }
# esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git", rev = "26cf556cde2b7a78358f440b362608b3264d30bd" }
# esp-println = { git = "https://github.com/esp-rs/esp-hal.git", rev = "26cf556cde2b7a78358f440b362608b3264d30bd" }
# esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git", rev = "26cf556cde2b7a78358f440b362608b3264d30bd" }
# xtensa-lx-rt = { git = "https://github.com/esp-rs/esp-hal.git", rev = "26cf556cde2b7a78358f440b362608b3264d30bd" }

[features]
default = ["defmt", "rtt"]
#default = ["defmt", "esp-println"]

battery_max17055 = ["dep:max17055"]

hw_v4 = ["battery_max17055", "esp32s3"]
hw_v6 = ["battery_max17055"] # skipped v5, v6 has S3 and C6 options

# MCU options
esp32s3 = [
    "esp-hal/esp32s3",
    "dep:norfs-esp32s3",
    "esp-backtrace?/esp32s3",
    "esp-wifi/esp32s3",
    "esp-hal-embassy/esp32s3",
    "esp-println?/esp32s3",
]
esp32c6 = [
    "esp-hal/esp32c6",
    "dep:norfs-esp32c6",
    "esp-backtrace?/esp32c6",
    "esp-wifi/esp32c6",
    "esp-hal-embassy/esp32c6",
    "esp-println?/esp32c6",
]

# Signal processing
downsampler-light = [] # uses IIR-based filtering and less memory

defmt = [
    "norfs/defmt",
    "embedded-io/defmt-03",
    "embedded-graphics/defmt",
    "esp-wifi/defmt",
    "esp-hal/defmt",
    "esp-backtrace?/defmt",
    "esp-println?/defmt-espflash",

    "logger/defmt",
    "config-site/defmt",
    "ads129x/defmt",
    "max17055?/defmt",
    "bad-server/defmt",
    "gui/defmt",
    "signal-processing/defmt",
    "reqwless/defmt",
    "embedded-tls/defmt",

    "embassy-net/defmt",
    "smoltcp/defmt",
    "rtt-target?/defmt",
    "panic-rtt-target?/defmt",
]

log = [] # todo remove
rtt = ["dep:panic-rtt-target", "dep:rtt-target"]
esp-println = ["dep:esp-backtrace", "dep:esp-println", "esp-println/jtag-serial"]

[package.metadata.espflash]
partition_table = "partitions.csv"
format = "esp-bootloader"

[workspace]
members = [
    ".",
    "ads129x",
    "bad-server",
    "device-descriptor",
    "embassy-alloc-taskpool",
    "gui",
    "macros",
    "register-access",
    "signal-processing",
    "xtask",
]

[profile.dev]
opt-level = 3
codegen-units = 1
lto = "thin"

[profile.release]
debug = true
codegen-units = 1
lto = "fat"

[profile.lto]
inherits = "release"
lto = "fat"
