[package]
name = "card_io_fw"
description = "Card/IO ECG device firmware"
version = "0.1.0"
authors = ["Dániel Buga <bugadani@gmail.com>"]
edition = "2021"
license = "MIT"

[workspace.dependencies]
embedded-graphics = "0.8.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
embedded-nal-async = "0.8.0"
embedded-io = "0.6"
embedded-io-async = "0.6"
embedded-menu = "0.6.0"
embassy-net = { version = "0.7", features = [
    "tcp",
    "dhcpv4",
    "dns",
    "medium-ethernet",
] }
embassy-sync = { version = "0.7.0" }
embassy-executor = { version = "0.9" }

heapless = "0.9"
signal-processing = { path = "signal-processing" }
norfs = { git = "https://github.com/card-io-ecg/norfs.git", rev = "4d7f5ea" }
norfs-driver = { git = "https://github.com/card-io-ecg/norfs.git", rev = "4d7f5ea" }
norfs-esp32s3 = { git = "https://github.com/card-io-ecg/norfs.git", rev = "4d7f5ea" }
norfs-esp32c6 = { git = "https://github.com/card-io-ecg/norfs.git", rev = "4d7f5ea" }
object-chain = "0.1.3"
bad-server = { path = "bad-server" }
defmt = "1"
ufmt = "0.2.0"

smoltcp = { version = "0.12.0", default-features = false, features = [
  "dns-max-server-count-2",
] }

[dependencies]
cfg-if = "1"

embassy-futures = { version = "0.1.0" }
embassy-executor = { workspace = true, features = ["nightly"] }
embassy-time = { version = "0.5.0" }

rtt-target = { version = "0.6.0", optional = true }
panic-rtt-target = { version = "0.2.0", optional = true }

esp-bootloader-esp-idf = "0.3.0"
esp-hal = { version = "1.0.0", features = ["unstable"] }
esp-rtos = { version = "0.2", features = ["esp-radio", "embassy", "esp-alloc"] }
esp-backtrace = { version = "0.18", features = ["panic-handler", "semihosting"], optional = true }
esp-println = { version = "0.16", default-features = false, optional = true, features = [
    "critical-section",
] }
esp-alloc = "0.9"
esp-radio = { version = "0.17", features = ["wifi"] }

display-interface = "0.5"
display-interface-spi = "0.5"
ssd1306 = { version = "0.9.0", features = ["async", "graphics"] }
maybe-async-cfg = "=0.2.4"

portable_atomic_enum = "0.3.1"
config-site = { path = "config-site", default-features = false, features = [
    "embedded",
] }
critical-section = "1.2"
gui = { path = "gui" }
macros = { path = "macros" }
embassy-alloc-taskpool = { path = "embassy-alloc-taskpool" }
ads129x = { path = "ads129x" }
max17055 = { path = "max17055", optional = true }
signal-processing = { workspace = true, features = ["alloc"] }
replace_with = { version = "0.1", default-features = false, features = [
    "nightly",
] }
static_cell = { version = "2.0.0" }
bad-server = { path = "bad-server", features = ["embassy"] }
embedded-tls = { version = "0.17.0", default-features = false }
reqwless = "0.13.0"

embedded-graphics.workspace = true
embedded-hal.workspace = true
embedded-hal-async.workspace = true
embedded-hal-bus.workspace = true
embedded-nal-async.workspace = true
embedded-io.workspace = true
embedded-io-async.workspace = true
embedded-menu.workspace = true
embassy-net.workspace = true
embassy-sync.workspace = true

norfs.workspace = true
norfs-driver.workspace = true
norfs-esp32s3 = { workspace = true, optional = true, features = [
    "critical-section",
] }
norfs-esp32c6 = { workspace = true, optional = true, features = [
    "critical-section",
] }
heapless.workspace = true
object-chain.workspace = true
ufmt.workspace = true

defmt.workspace = true

smoltcp.workspace = true
crc = "3.0.1"
enumset = "1.1.3"

[patch.crates-io]
#esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ee95c481d39817c5791df0fb616a0f2408f01e08" }
#esp-rom-sys = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ee95c481d39817c5791df0fb616a0f2408f01e08" }
#esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ee95c481d39817c5791df0fb616a0f2408f01e08" }
#esp-rtos = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ee95c481d39817c5791df0fb616a0f2408f01e08" }
#esp-radio = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ee95c481d39817c5791df0fb616a0f2408f01e08" }
#esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ee95c481d39817c5791df0fb616a0f2408f01e08" }
#esp-println = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ee95c481d39817c5791df0fb616a0f2408f01e08" }
#esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ee95c481d39817c5791df0fb616a0f2408f01e08" }
#xtensa-lx-rt = { git = "https://github.com/esp-rs/esp-hal.git", rev = "ee95c481d39817c5791df0fb616a0f2408f01e08" }

# esp-bootloader-esp-idf = { path = "C:/_Espressif/esp-hal/esp-bootloader-esp-idf" }
# esp-rom-sys = { path = "C:/_Espressif/esp-hal/esp-rom-sys" }
# esp-hal = { path = "C:/_Espressif/esp-hal/esp-hal" }
# esp-rtos = { path = "C:/_Espressif/esp-hal/esp-rtos" }
# esp-radio = { path = "C:/_Espressif/esp-hal/esp-radio" }
# esp-backtrace = { path = "C:/_Espressif/esp-hal/esp-backtrace" }
# esp-println = { path = "C:/_Espressif/esp-hal/esp-println" }
# esp-alloc = { path = "C:/_Espressif/esp-hal/esp-alloc" }
# xtensa-lx-rt = { path = "C:/_Espressif/esp-hal/xtensa-lx-rt" }

heapless = { git = "https://github.com/rust-embedded/heapless.git" }

[features]
default = ["defmt", "rtt"]
#default = ["defmt", "esp-println"]

battery_max17055 = ["dep:max17055"]

hw_v4 = ["battery_max17055", "esp32s3"]
hw_v6 = ["battery_max17055"] # skipped v5, v6 has S3 and C6 options

# MCU options
esp32s3 = [
    "esp-hal/esp32s3",
    "dep:norfs-esp32s3",
    "esp-backtrace?/esp32s3",
    "esp-radio/esp32s3",
    "esp-rtos/esp32s3",
    "esp-println?/esp32s3",
    "esp-bootloader-esp-idf/esp32s3",
]
esp32c6 = [
    "esp-hal/esp32c6",
    "dep:norfs-esp32c6",
    "esp-backtrace?/esp32c6",
    "esp-radio/esp32c6",
    "esp-rtos/esp32c6",
    "esp-println?/esp32c6",
    "esp-bootloader-esp-idf/esp32c6",
]

# Signal processing
downsampler-light = [] # uses IIR-based filtering and less memory

defmt = [
    "norfs/defmt",
    "embedded-io/defmt-03",
    "embedded-graphics/defmt",
    "esp-radio/defmt",
    "esp-rtos/defmt",
    "esp-hal/defmt",
    "esp-hal/defmt",
    "esp-backtrace?/defmt",
    "esp-println?/defmt-espflash",

    "config-site/defmt",
    "ads129x/defmt",
    "max17055?/defmt",
    "bad-server/defmt",
    "gui/defmt",
    "signal-processing/defmt",
    "reqwless/defmt",
    "embedded-tls/defmt",
    "heapless/defmt",

    "embassy-net/defmt",
    "smoltcp/defmt",
    "rtt-target?/defmt",
    "panic-rtt-target?/defmt",
]

rtt = ["dep:rtt-target", "dep:panic-rtt-target"]
esp-println = ["dep:esp-println", "esp-println/jtag-serial", "dep:esp-backtrace"]

[package.metadata.espflash]
partition_table = "partitions.csv"
format = "esp-bootloader"

[workspace]
members = [
    ".",
    "ads129x",
    "bad-server",
    "embassy-alloc-taskpool",
    "gui",
    "macros",
    "signal-processing",
    "xtask",
]

[profile.dev]
opt-level = 3
codegen-units = 1
lto = "thin"

[profile.release]
debug = true
codegen-units = 1
lto = "fat"

[profile.lto]
inherits = "release"
lto = "fat"
