[package]
name = "ads129x"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1.4.3", default-features = false }
device-descriptor = { path = "../device-descriptor" }
embedded-hal = "1.0.0-alpha.10"
embedded-hal-async = "0.2.0-alpha.1"
log = "0.4.17"
register-access = { path = "../register-access" }
