[package]
name = "ads129x"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1.4.3", default-features = false }
device-descriptor = { path = "../device-descriptor" }
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
register-access = { path = "../register-access" }
logger = { workspace = true }
log = { workspace = true, optional = true }
defmt = { workspace = true, optional = true }
ufmt = { workspace = true, optional = true }

[features]
default = []
defmt = ["dep:defmt", "logger/defmt", "device-descriptor/defmt"]
log = ["dep:log", "logger/log"]
ufmt-impl = ["dep:ufmt", "device-descriptor/ufmt-impl"]
