[package]
name = "bad-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-io = { version = "1", optional = true }
defmt = { workspace = true, optional = true }
embassy-net = { workspace = true, optional = true }
embedded-io = { workspace = true }
embedded-svc = { workspace = true }
heapless = { workspace = true, features = ["ufmt-impl"] }
httparse = { version = "1.8", default-features = false }
logger = { workspace = true }
log = { workspace = true, optional = true }
smol = { version = "1", optional = true }
object-chain = { workspace = true }
const-fnv1a-hash = "1.1"
const_base = "0.2.0"
ufmt = { workspace = true }
smoltcp = { workspace = true }

[dev-dependencies]
simple_logger = "4.1"

[features]
default = []
std = ["async-io", "smol"]
embassy = ["embassy-net"]
log = ["dep:log", "logger/log"]
defmt = ["dep:defmt", "logger/defmt"]

[[example]]
name = "simple"
required-features = ["std", "log"]
