[package]
name = "config-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bad-server = { workspace = true }
defmt = { workspace = true, optional = true }
embassy-sync = { workspace = true, optional = true }
embedded-io = { workspace = true, optional = true }
heapless = { workspace = true }
logger = { workspace = true }
log = { workspace = true, optional = true }
norfs = { git = "https://github.com/card-io-ecg/norfs.git", optional = true }
smol = { version = "1.3", optional = true }

[build-dependencies]
libflate = "1.4.0"
minify-html = "0.11.1"

[[example]]
name = "simple"
required-features = ["bad-server/std", "bad-server/log"]

[dev-dependencies]
simple_logger = "4.1"
smol = "1"

[features]
default = []
embedded = ["dep:norfs", "dep:embassy-sync", "dep:embedded-io", "bad-server/embassy"]
std = ["dep:smol", "bad-server/std"]
log = ["dep:log", "bad-server/log"]
defmt = ["dep:defmt", "bad-server/defmt"]
