[package]
name = "config-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bad-server = { workspace = true }
cfg-if = "1"
defmt = { workspace = true, optional = true }
embassy-sync = { workspace = true, optional = true }
embedded-io-async = { workspace = true, optional = true }
heapless = { workspace = true }
norfs = { workspace = true, optional = true }
smol = { version = "1.3", optional = true }
object-chain.workspace = true

[build-dependencies]
libflate = { version = "1.4.0", optional = true }
minify-html = { version = "0.11.1", optional = true }

[[example]]
name = "simple"
required-features = ["bad-server/std", "bad-server/log"]

[dev-dependencies]
smol = "1"
smoltcp = { workspace = true, features = ["proto-ipv4"] }

[features]
default = []
embedded = ["dep:norfs", "dep:embassy-sync", "dep:embedded-io-async", "bad-server/embassy"]
compress = ["dep:minify-html", "dep:libflate"]
std = ["dep:smol", "bad-server/std"]
defmt = ["dep:defmt", "bad-server/defmt"]
