[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = { workspace = true }
embedded-menu = { workspace = true }
norfs = { workspace = true }
embedded-io = { workspace = true }
heapless = { workspace = true }
embedded-text = "0.6"
embedded-layout = "0.3"
tinybmp = "0.5"

signal-processing = { path = "../signal-processing" }

[dev-dependencies]
embedded-graphics-simulator = "0.5.0"
