[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = { workspace = true }
embedded-menu = { workspace = true }
norfs = { workspace = true }
embedded-io = { workspace = true }
heapless = { workspace = true, features = ["ufmt-impl"] }
embedded-text = "0.6.5"
embedded-layout = "0.4.1"
tinybmp = "0.5"
ufmt = { workspace = true }

signal-processing = { workspace = true }
logger = { workspace = true }

defmt = { workspace = true, optional = true }
log = { workspace = true, optional = true }

itertools = { version = "0.11.0", default-features = false }
qrcodegen-no-heap = "1.8.1"

[dev-dependencies]
embedded-graphics-simulator = "0.5.0"

[features]
log = ["dep:log", "logger/log"]
defmt = ["dep:defmt", "logger/defmt"]
