[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
embedded-graphics = { workspace = true }
embedded-menu = { workspace = true }
embedded-io = { workspace = true }
embedded-io-async = { workspace = true }
embedded-layout = "0.4.1"
embedded-text = "0.6.6"
heapless = { workspace = true, features = ["ufmt"] }
norfs = { workspace = true }
tinybmp = "0.5"
ufmt = { workspace = true }

signal-processing = { workspace = true }

defmt = { workspace = true, optional = true }

itertools = { version = "0.11.0", default-features = false }
qrcodegen-no-heap = "1.8.1"

[dev-dependencies]
embedded-graphics-simulator = "0.5.0"

[features]
defmt = ["dep:defmt"]
