[package]
name = "max17055"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-slice-cast = { version = "1", default-features = false }
device-descriptor = { path = "../device-descriptor" }
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
register-access = { path = "../register-access" }
defmt = { workspace = true, optional = true }
log = { workspace = true, optional = true }
logger = { workspace = true }

[features]
default = []
defmt = ["dep:defmt", "device-descriptor/defmt", "logger/defmt"]
log = ["dep:log", "logger/log"]
