[package]
name = "max17055"
version = "0.1.0"
edition = "2021"

[dependencies]
device-driver = { git = "https://github.com/diondokter/device-driver", rev = "fd6ebcc1c84fd248f3eabbc0ea839412026e95dd" }
defmt = { workspace = true, optional = true }
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }

[features]
default = []
defmt = ["dep:defmt", "device-driver/defmt"]
