[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
critical-section = { version =  "1.1", optional = true }
embassy-futures = { version = "0.1.0" }
heapless = "0.7"
log = "0.4"

[dev-dependencies]
async-std = { version = "1", features = ["attributes"] }
simple_logger = "4.1"

[features]
internal-flash = ["esp32s3"]
esp32s3 = ["internal-flash"]
critical-section = ["dep:critical-section"]
